# Venus

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  playwright.config.ts  pnpm-lock.yaml
.corepack/v1/pnpm/9.15.4/: README.md
apps/cli/: package.json
apps/cli/src/: index.ts
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx
docs/: AGENTS.md  ARCHITECTURE.md  AVATAR_SYSTEM_AUDIT.md  DESKTOP_RUNTIME.md  LOCAL_CHARACTER_ASSETS.md  LOCAL_CHARACTER_ASSET_IMPORT.md  MEMORY_SKILLS.md  PERSONA_MATRIX.md  PRODUCTION_CHECKLIST.md  ROADMAP.md  SAFETY.md  SECURITY.md  UI_REDESIGN_AUDIT.md  V0_4_GAP_AUDIT.md  VISUAL_REGRESSION.md
public/assets/characters/yuli-qingyi/: manifest.json
public/assets/characters/yuli-qingyi/3d/: yuli-qingyi.glb
scripts/: import-character-assets.test.ts  import-character-assets.ts
tests/e2e/: app.spec.ts  visual.spec.ts
