[package]
name = "personal-character-agent-desktop"
version = "0.1.0"
description = "Desktop shell for the Personal Character Agent MVP."
authors = ["Personal Character Agent"]
edition = "2021"

[lib]
name = "personal_character_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
